processed/jira/txt/LU/LU-17773.txt
Key:        LU-17773
Summary:    build fails against 5.19.0-45-generic
Link:       https://jira.whamcloud.com/browse/LU-17773
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Zhenyu Xu
Reporter:   Jian Yu
Created:    Wed, 24 Apr 2024 06:57:00 +0000
Updated:    Mon, 10 Jun 2024 13:27:58 +0000
Resolved:   Mon, 10 Jun 2024 13:27:58 +0000

--- Description ---
Lustre client build failed against kernel 5.19.0-45-generic:

In function 'lsme_unpack_comp',
    inlined from 'lsm_unpackmd_comp_md_v1' at /work/ihara/tmp/lustre-release/lustre/lov/lov_ea.c:619:10:
/work/ihara/tmp/lustre-release/lustre/lov/lov_ea.c:537:34: error: array subscript 'struct lov_stripe_md_entry[0]' is partly outside array bounds of 'struct lov_stripe_md_entry[0]' [-Werror=array-bounds]
  537 |                 lsme->lsme_magic = magic;
      |                 ~~~~~~~~~~~~~~~~~^~~~~~~
In file included from include/linux/fs.h:45,
                 from /work/ihara/tmp/lustre-release/libcfs/include/libcfs/linux/linux-misc.h:36,
                 from /work/ihara/tmp/lustre-release/libcfs/include/libcfs/libcfs.h:44,
                 from /work/ihara/tmp/lustre-release/lustre/lov/lov_ea.c:41:
In function 'kmalloc',
    inlined from 'lsme_unpack_comp' at /work/ihara/tmp/lustre-release/lustre/lov/lov_ea.c:536:3,
    inlined from 'lsm_unpackmd_comp_md_v1' at /work/ihara/tmp/lustre-release/lustre/lov/lov_ea.c:619:10:
include/linux/slab.h:600:24: note: object of size 72 allocated by 'kmem_cache_alloc_trace'
  600 |                 return kmem_cache_alloc_trace(
      |                        ^~~~~~~~~~~~~~~~~~~~~~~
  601 |                                 kmalloc_caches[kmalloc_type(flags)][index],
      |                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  602 |                                 flags, size);
      |                                 ~~~~~~~~~~~~

  CC [M]  /work/ihara/tmp/lustre-release/lustre/osc/osc_object.o
/work/ihara/tmp/lustre-release/lustre/llite/file.c:6224:27: error: initialization of 'struct posix_acl * (*)(struct inode *, int,  bool)' {aka 'struct posix_acl * (*)(struct inode *, int,  _Bool)'} from incompatible pointer type 'struct posix_acl * (*)(struct inode *, int)' [-Werror=incompatible-pointer-types]
 6224 |         .get_acl        = ll_get_acl,
      |                           ^~~~~~~~~~
/work/ihara/tmp/lustre-release/lustre/llite/file.c:6224:27: note: (near initialization for 'll_file_inode_operations.get_acl')

--- Comment (pjones, Mon, 10 Jun 2024 13:27:58 +0000) ---
Merged for 2.16

--- Comment (gerrit, Mon, 10 Jun 2024 06:12:16 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/54944/

Subject: LU-17773 lov: avoid partly outside array bounds build error

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: efbae87c84a78fc0508921362254aa75735b4b85

--- Comment (gerrit, Sun, 28 Apr 2024 08:13:11 +0000) ---
"Zhenyu Xu " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/54944

Subject: LU-17773 lov: avoid partly outside array bounds build error

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: c9590f81eb6787cfefc06c2bf63bca7b165bbcc5
